[package]
name = "rs-keycloak"
version = "0.3.1"
edition = "2021"

authors = ["Cosmo André"]
description = "Faça a autenticação dos seus projetos usando Keycloak"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cosmo9able/rs-keycloak"
keywords = ["auth", "login", "keycloak", "rest", "graphql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.8.1", features = ["punycode", "json-using-serde", "https-native"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { default-features = false, version = "1.0.96" }
uuid = { version = "1.4.1", features = ["serde"] }
